test/shared/mdapioutput/objects/User.object
<CustomObject>
    <fields>
        <fullName>Theme__c</fullName>
        <description>Theme for ISV WebApp display ( used for CSS loading using AppLoadedCss custom metadata )</description>
        <inlineHelpText>Theme for ISV WebApp display ( used for CSS loading using AppLoadedCss custom metadata )</inlineHelpText>
        <label>Theme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>BaseDXC</fullName>
                </value>
                <value>
                    <fullName>BaseFlat</fullName>
                </value>
                <value>
                    <fullName>BaseBlue</fullName>
                </value>
                <value>
                    <fullName>BaseBlueLight</fullName>
                </value>
                <value>
                    <fullName>Lelamanul</fullName>
                </value>
                <value>
                    <fullName>BaseGreen</fullName>
                </value>
                <value>
                    <fullName>DXC</fullName>
                    <isActive>false</isActive>
                    <label>DXC</label>
                </value>
                <value>
                    <fullName>Demo</fullName>
                    <isActive>false</isActive>
                    <label>Demo</label>
                </value>
                <value>
                    <fullName>Flat</fullName>
                    <isActive>false</isActive>
                    <label>Flat</label>
                </value>
                <value>
                    <fullName>Material</fullName>
                    <isActive>false</isActive>
                    <label>Material</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>URI</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WebAppProfiles__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>Web app profiles for user ( associated to menus &amp; components configuration)</description>
        <inlineHelpText>Web app profiles for user ( associated to menus &amp; components configuration)</inlineHelpText>
        <label>WebAppProfiles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>WebAppProfile</valueSetName>
        </valueSet>
    </fields>
</CustomObject>